[tool.poetry]
name = "proxybroker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "*"
aiohttp = "^3.3"
aiodns = "^1.1"
maxminddb = "^1.4"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.9.0"
pytest-mock = "^1.10"
pytest-pep8 = "^1.0"
pytest-flakes = "^4.0"
pytest = "^3.7"
